--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>Zaseth</groupId>
-    <artifactId>ByteArrayJava</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>maven-compiler-plugin</artifactId>
+    <version>3.7.0</version>
     <build>
         <plugins>
             <plugin>
@@ -19,6 +19,4 @@
             </plugin>
         </plugins>
     </build>
-
-
 </project>
