--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>Zaseth</groupId>
-    <artifactId>maven-compiler-plugin</artifactId>
+    <artifactId>ByteArray.java</artifactId>
     <version>3.7.0</version>
     <properties>
     	<maven-compiler-plugin-version>3.7.0</maven-compiler-plugin-version>
